--- a/index.html
+++ b/index.html
@@ -5,308 +5,233 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Ruchitha | DevOps Portfolio</title>
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
+  /* Background Gradient Animation */
   body {
     margin: 0;
-    font-family: 'Roboto', sans-serif;
-    background: linear-gradient(270deg, #d6e2f0, #f0f4f8, #d6e2f0, #f0f4f8);
-    background-size: 800% 800%;
-    animation: bgAnim 20s ease infinite;
-    color: #222;
-    line-height: 1.5;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: linear-gradient(-45deg, #a8dadc, #f1faee, #457b9d, #1d3557);
+    background-size: 400% 400%;
+    animation: gradientBG 20s ease infinite;
+    color: #1d3557;
     min-height: 100vh;
-    padding: 40px 20px;
-    display: flex;
-    justify-content: center;
+  }
+  @keyframes gradientBG {
+    0% {background-position:0% 50%;}
+    50% {background-position:100% 50%;}
+    100% {background-position:0% 50%;}
   }
 
-  @keyframes bgAnim {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
-  }
-
-  .portfolio-container {
-    background: white;
+  /* Container setup */
+  .container {
     max-width: 1100px;
-    width: 100%;
-    border-radius: 12px;
-    box-shadow: 0 15px 35px rgba(0,0,0,0.1);
+    margin: 40px auto;
     display: flex;
-    overflow: hidden;
+    gap: 40px;
+    padding: 20px;
   }
 
-  /* Sidebar */
-  .sidebar {
-    background: #0077b6;
-    color: white;
-    padding: 40px 30px;
-    width: 280px;
-    flex-shrink: 0;
+  /* Left and Right columns */
+  .left, .right {
+    background: rgba(255 255 255 / 0.85);
+    border-radius: 15px;
+    padding: 25px 30px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
   }
 
-  .sidebar h1 {
-    margin: 0 0 20px 0;
-    font-size: 2.8rem;
+  /* Left column */
+  .left h1 {
+    margin: 0 0 15px 0;
+    font-size: 38px;
+    color: #e63946;
     letter-spacing: 2px;
-    font-weight: 700;
   }
-
   .contact-info p, .contact-info a {
-    margin: 8px 0;
-    font-size: 1rem;
-    color: #caf0f8;
-    text-decoration: none;
+    font-size: 16px;
+    margin: 6px 0;
+    color: #1d3557;
   }
-
+  .contact-info a {
+    text-decoration: none;
+    font-weight: 600;
+    color: #457b9d;
+  }
   .contact-info a:hover {
     text-decoration: underline;
   }
 
-  /* Right main content split in 2 columns */
-  .main-content {
-    display: flex;
-    flex: 1;
-    padding: 40px 50px;
-    gap: 40px;
-  }
-
-  .column {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-  }
-
-  /* Section styles */
-  .section h2 {
-    font-weight: 700;
-    color: #023e8a;
-    border-bottom: 3px solid #0077b6;
+  /* Section headings */
+  h2 {
+    border-bottom: 3px solid #e63946;
     padding-bottom: 6px;
-    margin-bottom: 20px;
-    font-size: 1.7rem;
-    letter-spacing: 1px;
+    margin-bottom: 15px;
+    font-size: 24px;
+    color: #e63946;
+    letter-spacing: 1.5px;
   }
 
+  /* Lists */
   ul {
-    list-style: disc inside;
-    margin-left: 0;
+    margin: 0;
     padding-left: 20px;
-    color: #03045e;
+    list-style-type: square;
+    color: #1d3557;
   }
-
   ul li {
-    margin-bottom: 10px;
-    font-size: 1rem;
+    margin-bottom: 8px;
+    line-height: 1.4;
   }
 
-  p {
-    font-size: 1rem;
-    margin-bottom: 20px;
-    color: #03045e;
+  /* Sections spacing */
+  .right section {
+    margin-bottom: 25px;
   }
 
-  /* Projects */
-  .projects-list {
-    display: flex;
-    flex-direction: column;
-    gap: 14px;
+  /* Projects & progress bars styling */
+  .project-list, .certifications-list, .interests-list {
+    list-style-type: disc;
+    padding-left: 20px;
   }
 
-  .project-item {
-    background: #caf0f8;
-    border-radius: 6px;
-    padding: 14px 20px;
-    color: #0077b6;
-    font-weight: 600;
-    box-shadow: 0 3px 8px rgba(0, 119, 182, 0.25);
-    transition: background 0.3s ease;
-    border-left: 5px solid #0077b6;
-  }
-
-  .project-item:hover {
-    background: #90e0ef;
-    cursor: pointer;
-  }
-
-  .project-item a {
-    text-decoration: none;
-    color: inherit;
-  }
-
-  /* Skills progress bars */
+  /* Skill progress bar container */
   .skill {
-    margin-bottom: 18px;
+    margin-bottom: 15px;
   }
-
   .skill-name {
-    font-weight: 600;
     margin-bottom: 6px;
-    color: #023e8a;
+    font-weight: 600;
+    color: #1d3557;
   }
-
-  .progress-bar {
-    background: #e0e0e0;
+  .progress-container {
+    width: 100%;
+    background-color: #ddd;
     border-radius: 12px;
     overflow: hidden;
-    height: 16px;
   }
-
   .progress {
-    height: 16px;
-    background: #0077b6;
-    width: 0%;
+    height: 14px;
+    background-color: #e63946;
+    width: 0;
     border-radius: 12px;
-    transition: width 1.5s ease-in-out;
-  }
-
-  /* Timeline for work experience */
-  .timeline {
-    position: relative;
-    padding-left: 30px;
-    border-left: 3px solid #0077b6;
-  }
-
-  .timeline-item {
-    margin-bottom: 25px;
-    position: relative;
-  }
-
-  .timeline-item::before {
-    content: '';
-    position: absolute;
-    left: -11px;
-    top: 5px;
-    width: 18px;
-    height: 18px;
-    background: #0077b6;
-    border-radius: 50%;
-    border: 3px solid white;
-  }
-
-  .timeline-item h3 {
-    margin: 0 0 6px 0;
-    font-size: 1.1rem;
-    color: #023e8a;
-  }
-
-  .timeline-item time {
-    font-style: italic;
-    color: #555;
-    font-size: 0.9rem;
-    margin-bottom: 8px;
-    display: block;
-  }
-
-  /* Certifications */
-  .certifications-list {
-    list-style: none;
-    padding-left: 0;
-  }
-
-  .certifications-list li {
-    background: #caf0f8;
-    margin-bottom: 12px;
-    padding: 10px 14px;
-    border-left: 5px solid #0077b6;
-    font-weight: 600;
-    color: #0077b6;
+    transition: width 2s ease;
   }
 
   /* Responsive */
-  @media(max-width: 960px) {
-    .main-content {
+  @media (max-width: 900px) {
+    .container {
       flex-direction: column;
-      padding: 30px 20px;
-      gap: 30px;
-    }
-    .column {
-      width: 100%;
-    }
-    .sidebar {
-      width: 100%;
-      padding: 20px 30px;
-      text-align: center;
+      padding: 15px;
     }
   }
 </style>
 </head>
 <body>
-<div class="portfolio-container" role="main">
 
-  <aside class="sidebar" aria-label="Contact and personal information">
+<div class="container">
+  <!-- Left Column -->
+  <div class="left">
     <h1>RUCHITHA</h1>
     <div class="contact-info">
-      <p><strong>Email:</strong><br /><a href="mailto:ruchithakatakm99@gmail.com">ruchithakatakm99@gmail.com</a></p>
-      <p><strong>Mobile:</strong><br />+91 6303476240 / +91 8340894285</p>
-      <p><strong>LinkedIn:</strong><br /><a href="https://www.linkedin.com/in/ruchitha-r-423409274" target="_blank" rel="noopener">linkedin.com/in/ruchitha-r-423409274</a></p>
-    </div>
-  </aside>
-
-  <section class="main-content">
-
-    <!-- Left column -->
-    <div class="column" aria-label="Left column content">
-      <section class="section" id="career-objective">
-        <h2>Career Objective</h2>
-        <p>Aspiring DevOps/Site Reliability Engineer (SRE) with hands-on experience in cloud infrastructure management, server monitoring, and CI/CD pipeline deployments. Skilled in AWS, Linux, Shell Scripting, and Python with practical knowledge of infrastructure automation and cloud-native tooling. Passionate about building scalable, reliable systems and reducing toil through automation.</p>
-      </section>
-
-      <section class="section" id="work-experience">
-        <h2>Work Experience</h2>
-        <div class="timeline">
-          <div class="timeline-item">
-            <h3>Associate Cloud Engineer, OnPassive Private Limited</h3>
-            <time>July 2023 – March 2025</time>
-            <ul>
-              <li>Designed and maintained CI/CD pipelines using Jenkins, Git, and GitHub Actions.</li>
-              <li>Monitored server & app performance via CloudWatch, Nagios, and Prometheus.</li>
-              <li>Managed AWS infrastructure (EC2, S3, IAM, VPC, CloudFormation).</li>
-              <li>Automated server provisioning and maintenance using Shell scripting & Python.</li>
-            </ul>
-          </div>
-        </div>
-      </section>
-
-      <section class="section" id="education">
-        <h2>Education</h2>
-        <ul>
-          <li>B.Tech (EEE) - Swami Ramananda Teertha Institute of Science and Technology, 8.4 CGPA (2021)</li>
-          <li>Intermediate - Gowthami Junior College, 97.2% (2017)</li>
-          <li>S.S.C - Krishnaveni Talent School, 9.8 CGPA (2015)</li>
-        </ul>
-      </section>
-
-      <section class="section" id="strengths">
-        <h2>Strengths</h2>
-        <ul>
-          <li>Strong communication and interpersonal skills</li>
-          <li>Fast learner and adaptive to new technologies</li>
-          <li>Team player with excellent problem-solving abilities</li>
-        </ul>
-      </section>
+      <p><strong>Email:</strong> <a href="mailto:ruchithakatakm99@gmail.com">ruchithakatakm99@gmail.com</a></p>
+      <p><strong>Mobile:</strong> +91 6303476240 / +91 8340894285</p>
+      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ruchitha-r-423409274" target="_blank" rel="noopener noreferrer">linkedin.com/in/ruchitha-r-423409274</a></p>
+      <p><strong>GitHub:</strong> <a href="https://github.com/Ruchitha829" target="_blank" rel="noopener noreferrer">github.com/Ruchitha829</a></p>
     </div>
 
-    <!-- Right column -->
-    <div class="column" aria-label="Right column content">
-      <section class="section" id="technical-skills">
-        <h2>Technical Skills</h2>
-        <div class="skill">
-          <div class="skill-name">AWS (EC2, S3, CloudFormation, etc.)</div>
-          <div class="progress-bar"><div class="progress" style="width: 85%;"></div></div>
-        </div>
-        <div class="skill">
-          <div class="skill-name">DevOps Tools (Docker, Jenkins, Kubernetes)</div>
-          <div class="progress-bar"><div class="progress" style="width: 75%;"></div></div>
-        </div>
-        <div class="skill">
-          <div class="skill-name">Version Control (Git, GitHub)</div>
-          <div class="progress-bar"><div class="progress" style="width: 85%;"></div></div>
-        </div>
-        <div class="skill">
-          <div class="skill-name">Programming (Python, Shell
+    <section>
+      <h2>Skills</h2>
+      <div class="skill">
+        <div class="skill-name">AWS Cloud</div>
+        <div class="progress-container"><div class="progress" style="width: 85%;"></div></div>
+      </div>
+      <div class="skill">
+        <div class="skill-name">CI/CD Pipelines (Jenkins, GitHub Actions)</div>
+        <div class="progress-container"><div class="progress" style="width: 80%;"></div></div>
+      </div>
+      <div class="skill">
+        <div class="skill-name">Infrastructure as Code (Terraform, Ansible)</div>
+        <div class="progress-container"><div class="progress" style="width: 75%;"></div></div>
+      </div>
+      <div class="skill">
+        <div class="skill-name">Containerization (Docker, Kubernetes)</div>
+        <div class="progress-container"><div class="progress" style="width: 70%;"></div></div>
+      </div>
+      <div class="skill">
+        <div class="skill-name">Scripting (Python, Shell)</div>
+        <div class="progress-container"><div class="progress" style="width: 85%;"></div></div>
+      </div>
+    </section>
+
+    <section>
+      <h2>Projects</h2>
+      <ul class="project-list">
+        <li><strong>LAMP Auto Deploy:</strong> Automated deployment of Linux, Apache, MySQL, PHP stack using shell scripts and Ansible.</li>
+        <li><strong>System Monitor:</strong> Real-time monitoring of system resources with alerting via email and Slack notifications.</li>
+        <li><strong>User Process Tracker:</strong> Tracks and logs active user sessions on Linux servers.</li>
+        <li><strong>DevOps AWS Project:</strong> Infrastructure provisioning using Terraform with CI/CD pipeline integration for scalable microservices deployment.</li>
+      </ul>
+    </section>
+  </div>
+
+  <!-- Right Column -->
+  <div class="right">
+    <section>
+      <h2>Career Objective</h2>
+      <p>Passionate DevOps/Site Reliability Engineer (SRE) skilled in cloud infrastructure management, automation, monitoring, and CI/CD deployments. Adept at improving system uptime and reliability through innovative automation and collaboration. Eager to contribute to dynamic DevOps teams focused on scalable, secure, and efficient cloud-native environments.</p>
+    </section>
+
+    <section>
+      <h2>Work Experience</h2>
+      <p><strong>OnPassive Private Limited</strong> — Associate Cloud Engineer</p>
+      <p><em>July 2023 – March 2025</em></p>
+      <ul>
+        <li>Designed and maintained CI/CD pipelines with Jenkins, Git, and GitHub Actions for automated builds and deployments.</li>
+        <li>Monitored applications and servers using Amazon CloudWatch, Nagios, and Prometheus with proactive alert configurations.</li>
+        <li>Managed AWS cloud infrastructure: EC2, S3, IAM, VPC, CloudFormation to build secure, scalable environments.</li>
+        <li>Automated server provisioning and maintenance with Shell scripting and Python, improving deployment efficiency.</li>
+        <li>Implemented Infrastructure as Code using Terraform and Ansible for version-controlled environment setups.</li>
+        <li>Collaborated with Agile development teams to integrate DevOps best practices into SDLC workflows.</li>
+        <li>Participated in incident response, root cause analysis, and on-call rotations to improve reliability and MTTR.</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Certifications</h2>
+      <ul class="certifications-list">
+        <li>AWS Certified Solutions Architect – Associate</li>
+        <li>Linux Foundation Certified System Administrator (LFCS)</li>
+        <li>Docker Certified Associate (DCA)</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Interests</h2>
+      <ul class="interests-list">
+        <li>Cloud Infrastructure & Automation</li>
+        <li>Continuous Integration & Delivery (CI/CD)</li>
+        <li>Monitoring & Alerting Systems</li>
+        <li>Containerization & Orchestration (Docker & Kubernetes)</li>
+        <li>Infrastructure as Code (Terraform, CloudFormation)</li>
+      </ul>
+    </section>
+  </div>
+</div>
+
+<script>
+  // Animate skill progress bars on load
+  window.addEventListener('DOMContentLoaded', () => {
+    const progressBars = document.querySelectorAll('.progress');
+    progressBars.forEach(bar => {
+      const width = bar.style.width;
+      bar.style.width = '0%';
+      setTimeout(() => {
+        bar.style.width = width;
+      }, 100);
+    });
+  });
+</script>
+
+</body>
+</html>
