--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Ruchitha | DevOps Portfolio</title>
 <style>
-  /* Background Gradient Animation */
   body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -21,7 +20,6 @@
     100% {background-position:0% 50%;}
   }
 
-  /* Container setup */
   .container {
     max-width: 1100px;
     margin: 40px auto;
@@ -30,9 +28,8 @@
     padding: 20px;
   }
 
-  /* Left and Right columns */
   .left, .right {
-    background: rgba(255 255 255 / 0.85);
+    background: rgba(255, 255, 255, 0.85);
     border-radius: 15px;
     padding: 25px 30px;
     box-shadow: 0 4px 15px rgba(0,0,0,0.1);
@@ -41,7 +38,6 @@
     flex-direction: column;
   }
 
-  /* Left column */
   .left h1 {
     margin: 0 0 15px 0;
     font-size: 38px;
@@ -62,7 +58,6 @@
     text-decoration: underline;
   }
 
-  /* Section headings */
   h2 {
     border-bottom: 3px solid #e63946;
     padding-bottom: 6px;
@@ -72,7 +67,6 @@
     letter-spacing: 1.5px;
   }
 
-  /* Lists */
   ul {
     margin: 0;
     padding-left: 20px;
@@ -84,18 +78,15 @@
     line-height: 1.4;
   }
 
-  /* Sections spacing */
   .right section {
     margin-bottom: 25px;
   }
 
-  /* Projects & progress bars styling */
   .project-list, .certifications-list, .interests-list {
     list-style-type: disc;
     padding-left: 20px;
   }
 
-  /* Skill progress bar container */
   .skill {
     margin-bottom: 15px;
   }
@@ -118,7 +109,6 @@
     transition: width 2s ease;
   }
 
-  /* Responsive */
   @media (max-width: 900px) {
     .container {
       flex-direction: column;
@@ -141,6 +131,24 @@
     </div>
 
     <section>
+      <h2>Career Objective</h2>
+      <p>Passionate DevOps/Site Reliability Engineer (SRE) skilled in cloud infrastructure management, automation, monitoring, and CI/CD deployments. Adept at improving system uptime and reliability through innovative automation and collaboration. Eager to contribute to dynamic DevOps teams focused on scalable, secure, and efficient cloud-native environments.</p>
+    </section>
+
+    <section>
+      <h2>Projects</h2>
+      <ul class="project-list">
+        <li><strong>LAMP Auto Deploy:</strong> Automated deployment of Linux, Apache, MySQL, PHP stack using shell scripts and Ansible.</li>
+        <li><strong>System Monitor:</strong> Real-time monitoring of system resources with alerting via email and Slack notifications.</li>
+        <li><strong>User Process Tracker:</strong> Tracks and logs active user sessions on Linux servers.</li>
+        <li><strong>DevOps AWS Project:</strong> Infrastructure provisioning using Terraform with CI/CD pipeline integration for scalable microservices deployment.</li>
+      </ul>
+    </section>
+  </div>
+
+  <!-- Right Column -->
+  <div class="right">
+    <section>
       <h2>Skills</h2>
       <div class="skill">
         <div class="skill-name">AWS Cloud</div>
@@ -162,24 +170,6 @@
         <div class="skill-name">Scripting (Python, Shell)</div>
         <div class="progress-container"><div class="progress" style="width: 85%;"></div></div>
       </div>
-    </section>
-
-    <section>
-      <h2>Projects</h2>
-      <ul class="project-list">
-        <li><strong>LAMP Auto Deploy:</strong> Automated deployment of Linux, Apache, MySQL, PHP stack using shell scripts and Ansible.</li>
-        <li><strong>System Monitor:</strong> Real-time monitoring of system resources with alerting via email and Slack notifications.</li>
-        <li><strong>User Process Tracker:</strong> Tracks and logs active user sessions on Linux servers.</li>
-        <li><strong>DevOps AWS Project:</strong> Infrastructure provisioning using Terraform with CI/CD pipeline integration for scalable microservices deployment.</li>
-      </ul>
-    </section>
-  </div>
-
-  <!-- Right Column -->
-  <div class="right">
-    <section>
-      <h2>Career Objective</h2>
-      <p>Passionate DevOps/Site Reliability Engineer (SRE) skilled in cloud infrastructure management, automation, monitoring, and CI/CD deployments. Adept at improving system uptime and reliability through innovative automation and collaboration. Eager to contribute to dynamic DevOps teams focused on scalable, secure, and efficient cloud-native environments.</p>
     </section>
 
     <section>
@@ -220,7 +210,6 @@
 </div>
 
 <script>
-  // Animate skill progress bars on load
   window.addEventListener('DOMContentLoaded', () => {
     const progressBars = document.querySelectorAll('.progress');
     progressBars.forEach(bar => {
