--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(-45deg, #a8dadc, #f1faee, #457b9d, #1d3557);
+    background: linear-gradient(-45deg, #e3f2fd, #ffffff, #f1f8e9, #e0f7fa);
     background-size: 400% 400%;
     animation: gradientBG 20s ease infinite;
-    color: #1d3557;
+    color: #102027;
     min-height: 100vh;
   }
   @keyframes gradientBG {
@@ -29,10 +29,10 @@
   }
 
   .left, .right {
-    background: rgba(255, 255, 255, 0.85);
-    border-radius: 15px;
-    padding: 25px 30px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    background: #ffffffcc;
+    border-radius: 12px;
+    padding: 25px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.08);
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -40,42 +40,42 @@
 
   .left h1 {
     margin: 0 0 15px 0;
-    font-size: 38px;
-    color: #e63946;
-    letter-spacing: 2px;
+    font-size: 36px;
+    color: #0077b6;
+    letter-spacing: 1.5px;
   }
   .contact-info p, .contact-info a {
-    font-size: 16px;
-    margin: 6px 0;
-    color: #1d3557;
+    font-size: 15px;
+    margin: 5px 0;
+    color: #102027;
   }
   .contact-info a {
     text-decoration: none;
     font-weight: 600;
-    color: #457b9d;
+    color: #0077b6;
   }
   .contact-info a:hover {
     text-decoration: underline;
   }
 
   h2 {
-    border-bottom: 3px solid #e63946;
-    padding-bottom: 6px;
-    margin-bottom: 15px;
-    font-size: 24px;
-    color: #e63946;
-    letter-spacing: 1.5px;
+    border-bottom: 2px solid #0077b6;
+    padding-bottom: 4px;
+    margin-bottom: 14px;
+    font-size: 22px;
+    color: #0077b6;
+    letter-spacing: 1px;
   }
 
   ul {
     margin: 0;
-    padding-left: 20px;
-    list-style-type: square;
-    color: #1d3557;
+    padding-left: 18px;
+    list-style-type: disc;
+    color: #263238;
   }
   ul li {
     margin-bottom: 8px;
-    line-height: 1.4;
+    line-height: 1.5;
   }
 
   .right section {
@@ -83,29 +83,28 @@
   }
 
   .project-list, .certifications-list, .interests-list {
-    list-style-type: disc;
-    padding-left: 20px;
+    padding-left: 18px;
   }
 
   .skill {
-    margin-bottom: 15px;
+    margin-bottom: 14px;
   }
   .skill-name {
-    margin-bottom: 6px;
+    margin-bottom: 5px;
     font-weight: 600;
-    color: #1d3557;
+    color: #37474f;
   }
   .progress-container {
     width: 100%;
-    background-color: #ddd;
-    border-radius: 12px;
+    background-color: #cfd8dc;
+    border-radius: 10px;
     overflow: hidden;
   }
   .progress {
     height: 14px;
-    background-color: #e63946;
+    background-color: #0077b6;
     width: 0;
-    border-radius: 12px;
+    border-radius: 10px;
     transition: width 2s ease;
   }
 
@@ -126,22 +125,22 @@
     <div class="contact-info">
       <p><strong>Email:</strong> <a href="mailto:ruchithakatakm99@gmail.com">ruchithakatakm99@gmail.com</a></p>
       <p><strong>Mobile:</strong> +91 6303476240 / +91 8340894285</p>
-      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ruchitha-r-423409274" target="_blank" rel="noopener noreferrer">linkedin.com/in/ruchitha-r-423409274</a></p>
-      <p><strong>GitHub:</strong> <a href="https://github.com/Ruchitha829" target="_blank" rel="noopener noreferrer">github.com/Ruchitha829</a></p>
+      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ruchitha-r-423409274" target="_blank">linkedin.com/in/ruchitha-r-423409274</a></p>
+      <p><strong>GitHub:</strong> <a href="https://github.com/Ruchitha829" target="_blank">github.com/Ruchitha829</a></p>
     </div>
 
     <section>
       <h2>Career Objective</h2>
-      <p>Passionate DevOps/Site Reliability Engineer (SRE) skilled in cloud infrastructure management, automation, monitoring, and CI/CD deployments. Adept at improving system uptime and reliability through innovative automation and collaboration. Eager to contribute to dynamic DevOps teams focused on scalable, secure, and efficient cloud-native environments.</p>
+      <p>Motivated and detail-oriented DevOps/SRE professional with expertise in AWS, automation, CI/CD, and cloud-native development. Seeking to leverage strong technical and collaborative skills to contribute to high-performing infrastructure and delivery teams.</p>
     </section>
 
     <section>
       <h2>Projects</h2>
       <ul class="project-list">
-        <li><strong>LAMP Auto Deploy:</strong> Automated deployment of Linux, Apache, MySQL, PHP stack using shell scripts and Ansible.</li>
-        <li><strong>System Monitor:</strong> Real-time monitoring of system resources with alerting via email and Slack notifications.</li>
-        <li><strong>User Process Tracker:</strong> Tracks and logs active user sessions on Linux servers.</li>
-        <li><strong>DevOps AWS Project:</strong> Infrastructure provisioning using Terraform with CI/CD pipeline integration for scalable microservices deployment.</li>
+        <li><strong>LAMP Auto Deploy:</strong> Automated provisioning and deployment of a full LAMP stack using Ansible and shell scripts.</li>
+        <li><strong>System Monitor:</strong> Monitors system resources and sends notifications using Slack and email integration.</li>
+        <li><strong>User Process Tracker:</strong> Bash-based tool that logs and monitors logged-in users for auditing purposes.</li>
+        <li><strong>AWS DevOps Project:</strong> Built Terraform-based infrastructure for microservices with CI/CD using GitHub Actions and Docker containers on EC2.</li>
       </ul>
     </section>
   </div>
@@ -155,7 +154,7 @@
         <div class="progress-container"><div class="progress" style="width: 85%;"></div></div>
       </div>
       <div class="skill">
-        <div class="skill-name">CI/CD Pipelines (Jenkins, GitHub Actions)</div>
+        <div class="skill-name">CI/CD (Jenkins, GitHub Actions)</div>
         <div class="progress-container"><div class="progress" style="width: 80%;"></div></div>
       </div>
       <div class="skill">
@@ -167,23 +166,21 @@
         <div class="progress-container"><div class="progress" style="width: 70%;"></div></div>
       </div>
       <div class="skill">
-        <div class="skill-name">Scripting (Python, Shell)</div>
+        <div class="skill-name">Scripting (Python, Bash)</div>
         <div class="progress-container"><div class="progress" style="width: 85%;"></div></div>
       </div>
     </section>
 
     <section>
       <h2>Work Experience</h2>
-      <p><strong>OnPassive Private Limited</strong> — Associate Cloud Engineer</p>
-      <p><em>July 2023 – March 2025</em></p>
+      <p><strong>OnPassive Pvt Ltd</strong> — Associate Cloud Engineer</p>
+      <p><em>Jul 2023 – Mar 2025</em></p>
       <ul>
-        <li>Designed and maintained CI/CD pipelines with Jenkins, Git, and GitHub Actions for automated builds and deployments.</li>
-        <li>Monitored applications and servers using Amazon CloudWatch, Nagios, and Prometheus with proactive alert configurations.</li>
-        <li>Managed AWS cloud infrastructure: EC2, S3, IAM, VPC, CloudFormation to build secure, scalable environments.</li>
-        <li>Automated server provisioning and maintenance with Shell scripting and Python, improving deployment efficiency.</li>
-        <li>Implemented Infrastructure as Code using Terraform and Ansible for version-controlled environment setups.</li>
-        <li>Collaborated with Agile development teams to integrate DevOps best practices into SDLC workflows.</li>
-        <li>Participated in incident response, root cause analysis, and on-call rotations to improve reliability and MTTR.</li>
+        <li>Designed scalable CI/CD pipelines using Jenkins and GitHub Actions.</li>
+        <li>Monitored infrastructure with CloudWatch, Prometheus, and Nagios.</li>
+        <li>Managed AWS services including EC2, S3, VPC, IAM, CloudFormation.</li>
+        <li>Automated provisioning using Terraform and Ansible scripts.</li>
+        <li>Collaborated with Agile teams to improve deployment frequency and stability.</li>
       </ul>
     </section>
 
@@ -200,10 +197,10 @@
       <h2>Interests</h2>
       <ul class="interests-list">
         <li>Cloud Infrastructure & Automation</li>
-        <li>Continuous Integration & Delivery (CI/CD)</li>
+        <li>Continuous Integration & Delivery</li>
         <li>Monitoring & Alerting Systems</li>
-        <li>Containerization & Orchestration (Docker & Kubernetes)</li>
-        <li>Infrastructure as Code (Terraform, CloudFormation)</li>
+        <li>Container Orchestration</li>
+        <li>Infrastructure as Code</li>
       </ul>
     </section>
   </div>
